--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "version": "4.3.2",
   "homepage": "http://skitter-slider.net",
   "description": "Skitter is a jquery slider with multiple transitions and customization options",
-  "main": "js/jquery.skitter.js",
+  "main": [
+    "js/jquery.skitter.js"
+  ],
   "keywords": [
     "slider",
     "slideshow",
@@ -11,7 +13,7 @@
     "animation"
   ],
   "authors": [
-    { "name": "Thiago Silva Ferreira", "email": "thiago@thiagosf.net" }
+    "Thiago Silva Ferreira <thiago@thiagosf.net>"
   ],
   "license": "MIT",
   "dependencies": {
