--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "skitter-slideshow",
-  "version": "4.4.0",
+  "version": "5.0.0",
   "homepage": "http://skitter-slider.net",
   "description": "Skitter is a jquery slider with multiple transitions and customization options",
   "main": [
-    "js/jquery.skitter.js"
+    "dist/jquery.skitter.js"
   ],
   "keywords": [
     "slider",
@@ -19,15 +19,5 @@
   "dependencies": {
     "jquery": ">= 2.1.0",
     "jquery.easing": ">= 1.3.0"
-  },
-  "ignore": [
-    "js/jquery-2.1.1.min.js", 
-    "js/jquery.easing.1.3.js", 
-    "images/example", 
-    "css/styles.css", 
-    "index.html", 
-    "fullscreen.html", 
-    "multiple.html", 
-    "xml"
-  ]
+  }
 }
