Ajustes gerais nos estilos

--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "url": "https://github.com/thiagosf/SkitterSlideshow/issues"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
     "gulp": "~3.9.1",
-    "gulp-webserver": "~0.9.1",
+    "gulp-babel": "~6.1.2",
     "gulp-minify": "0.0.12",
-    "gulp-sass": "~2.3.2"
+    "gulp-sass": "~2.3.2",
+    "gulp-webserver": "~0.9.1"
   }
 }
