--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "url": "https://github.com/thiagosf/SkitterSlideshow/issues"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
     "gulp": "~3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
     "gulp-minify": "0.0.12",
     "gulp-sass": "~2.3.2",
     "gulp-webserver": "~0.9.1"
