Ajuste estilo do box do preview e removendo largura automatica do box das thumbs quando nao passam da largura do box do skitter

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "directories": {
     "example": "examples"
   },
+  "scripts": {
+    "build": "gulp dist"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/thiagosf/skitter.git"
