--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "skitter-slideshow",
-  "version": "5.0.3",
+  "version": "5.1.3",
   "homepage": "http://skitter-slider.net",
   "description": "Skitter is a jquery slider responsive with multiple transitions and customization.",
   "main": [
-    "src/jquery.skitter.js"
+    "dist/jquery.skitter.js"
   ],
   "keywords": [
     "slider",
