--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skitter",
+  "name": "skitter-slider",
   "version": "5.1.3",
   "description": "Slideshow for anytime",
   "main": "dist/jquery.skitter.js",
